crates/sabiql/src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_management__connection_selector_with_active_service.snap
---
source: src/tests/render_snapshots/connection_management.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ Select Connection ──────────────────────────────────────────────────────────────────────────────╮                                │
│                                │> ● dev-local                           from pg_service.conf                                     │                                │
│                                │    prod-replica                        from pg_service.conf                                     │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │────────────────────────────────┘
│                                │                                                                                                 │────────────────────────────────┐
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                ╰ Enter Confirm  n New  Esc/q Close ──────────────────────────────────────────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Enter:Confirm  n:New  Esc/q:Close
